// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TipBox having custom background color renders correctly 1`] = `
<div
  class="alert box-container alert-default"
  style="background-color: white; border-color: white;"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <!---->
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox having custom border color renders correctly 1`] = `
<div
  class="alert box-container alert-default"
  style="border: 1px solid grey;"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <!---->
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox having custom border left color renders correctly 1`] = `
<div
  class="alert box-container alert-default"
  style="border-left: 5px solid blue;"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <!---->
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of default type with content renders correctly  1`] = `
<div
  class="alert box-container alert-default"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <!---->
     
    <!---->
     
    <div
      class="contents"
    >
      This is the default box
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of definition type light style renders correctly 1`] = `
<div
  class="alert box-container border-primary alert-border-left"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper  text-primary"
    >
      <i
        class="fas fa-atlas"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of definition type renders correctly 1`] = `
<div
  class="alert box-container alert-primary"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper"
    >
      <i
        class="fas fa-atlas"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of important type light style renders correctly 1`] = `
<div
  class="alert box-container border-danger alert-border-left"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper  text-danger"
    >
      <i
        class="fas fa-flag"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of important type renders correctly 1`] = `
<div
  class="alert box-container alert-danger"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper"
    >
      <i
        class="fas fa-flag"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of info type light style renders correctly 1`] = `
<div
  class="alert box-container border-info alert-border-left"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper  text-info"
    >
      <i
        class="fas fa-info"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of info type renders correctly 1`] = `
<div
  class="alert box-container alert-info"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper"
    >
      <i
        class="fas fa-info"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of seamless style renders correctly 1`] = `
<div
  class="alert box-container seamless"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <!---->
     
    <div
      aria-hidden="true"
      class="vertical-divider alert-default"
    />
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of success type light style renders correctly 1`] = `
<div
  class="alert box-container border-success alert-border-left"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper  text-success"
    >
      <i
        class="fas fa-check"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of success type renders correctly 1`] = `
<div
  class="alert box-container alert-success"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper"
    >
      <i
        class="fas fa-check"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of tip type light style renders correctly 1`] = `
<div
  class="alert box-container border-success alert-border-left"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper  text-success"
    >
      <i
        class="fas fa-lightbulb"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of tip type renders correctly 1`] = `
<div
  class="alert box-container alert-success"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper"
    >
      <i
        class="fas fa-lightbulb"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of warning type light style renders correctly 1`] = `
<div
  class="alert box-container border-warning alert-border-left"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper  text-warning"
    >
      <i
        class="fas fa-exclamation"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of warning type renders correctly 1`] = `
<div
  class="alert box-container alert-warning"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper"
    >
      <i
        class="fas fa-exclamation"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of wrong type light style renders correctly 1`] = `
<div
  class="alert box-container border-danger alert-border-left"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper  text-danger"
    >
      <i
        class="fas fa-times"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox of wrong type renders correctly 1`] = `
<div
  class="alert box-container alert-danger"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper"
    >
      <i
        class="fas fa-times"
      />
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox with custom color renders correctly 1`] = `
<div
  class="alert box-container alert-default"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <!---->
     
    <!---->
     
    <div
      class="contents"
      style="color: pink;"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox with dismissible option renders correctly 1`] = `
<div
  class="alert box-container alert-default"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper alert-dismissible"
  >
    <!---->
     
    <!---->
     
    <div
      class="contents"
    />
     
    <button
      aria-label="Close"
      class="close"
      data-dismiss="alert"
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
</div>
`;

exports[`TipBox with header renders correctly 1`] = `
<div
  class="alert box-container alert-default"
>
  <div
    class="box-header-wrapper"
  >
    <!---->
     
    <div
      class="box-header"
    >
      A header
    </div>
     
    <!---->
  </div>
   
  <!---->
   
  <div
    class="box-body-wrapper box-body-wrapper-with-heading"
  >
    <!---->
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox with icon and icon-size renders correctly 1`] = `
<div
  class="alert box-container alert-info"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper fa-2x"
    >
      :rocket:
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox with icon renders correctly 1`] = `
<div
  class="alert box-container alert-info"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <div
      class="icon-wrapper"
    >
      :rocket:
    </div>
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox with no-background option renders correctly 1`] = `
<div
  class="alert box-container alert-default no-background"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <!---->
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox with no-border option renders correctly 1`] = `
<div
  class="alert box-container alert-default no-border"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <!---->
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;

exports[`TipBox with no-icon option renders correctly 1`] = `
<div
  class="alert box-container alert-success"
>
  <!---->
   
  <!---->
   
  <div
    class="box-body-wrapper"
  >
    <!---->
     
    <!---->
     
    <div
      class="contents"
    />
     
    <!---->
  </div>
</div>
`;
